many to many save and get and display

--- a/projects/my-lib/src/lib/elements/ui/table-grid/src/table-grid.html
+++ b/projects/my-lib/src/lib/elements/ui/table-grid/src/table-grid.html
@@ -112,7 +112,11 @@
               </span>
             }
             @default {
-              {{ rowData[col.name] }}
+              @if (col.customDisplay) {
+                {{ col.customDisplay(rowData) }}
+              } @else {
+                {{ rowData[col.name] }}
+              }
             }
           }
         </td>
